# audio-tool

./: .env.example  .gitignore  Dockerfile  LOVABLE_FRONTEND_GUIDE.md  README.md  alembic.ini  default_prompts.txt  install_ml_safe.sh  model_test_report.json  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: config.py  database.py  main.py
app/api/: __init__.py  audio.py  audio_processor.py  audio_tools.py  auth.py  books.py  config.py  cosy_voice.py  dashboard.py  emotion_presets.py  highlights.py  hub.py  lora_training.py  projects.py  qwen_tts.py  rag.py  rate_limit.py  scripts.py  thoughts.py  voice_advanced.py  voice_styling.py  voice_tools.py  voices.py  websocket.py
app/core/: __init__.py  deps.py  error_handler.py  exceptions.py  security.py
app/middleware/: rate_limit.py
app/models/: __init__.py  audio_task.py  book.py  chunk.py  (+7 more)
docs/: 01-project-overview.md  02-database-design.md  03-api-design.md  04-audio-processing.md  05-frontend-backend-integration.md  AI_VOICE_AND_SYSTEM_IMPROVEMENTS.md  AI_VOICE_FEATURES.md  AI_VOICE_QUICKSTART.md  AI_VOICE_TECHNOLOGY_GUIDE.md  AI语音功能完善与改进建议.md  AI语音功能改进执行计划.md  AI语音处理工具完善建议详细文档.md  INSTALL_ML_MODELS.md  MODELS_REPORT.md  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  QWEN_TTS_RAG_GUIDE.md  TESTING_GUIDE.md
scripts/: create_test_user.py  e2e_hub_real_models.py  init_db.py  model_cli.py  setup_real_models_macos.sh
tests/: test_api.py  test_api_simple.py  test_new_features.py  test_zhipu_api_key.py  test_zhipu_direct.py  test_zhipu_integration.py
(+63 files in other folders)
